Subtest Grid: Resolve UI overflow issue
Scale the grid appropriately to fit within the content window if the length of the text pushes beyond the viewport width

--- a/app/_attachments/css/tangerine.less
+++ b/app/_attachments/css/tangerine.less
@@ -412,7 +412,7 @@ div.disabled
 
 body.class 
 {
-  table.grid
+  table.quest_grid
   {
     .grid_element
     {
@@ -421,8 +421,12 @@ body.class
   }
 }
 
+div.grid_wrapper{
+  float: left;
+}
+
 div.grid,
-table.grid
+table.quest_grid
 {
 
   clear: both;
@@ -539,6 +543,7 @@ div.timer
 
 .timer_wrapper
 {
+  clear: both;
   margin: 15px 0 20px;
 }
 
